// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytical Card Render without Crashing 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytical Card with AnalyticalCardHeader 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div
      class="AnalyticalCardHeader-cardHeader"
    >
      <div
        class="AnalyticalCardHeader-headerContent"
      >
        <div
          class="AnalyticalCardHeader-headerTitles"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <div
              class="AnalyticalCardHeader-headerText"
            >
              Header Title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytical Card with custom header 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div>
      I'm a header!
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
